# DRTAA

./: .gitlab-ci.yml  .gitmessage.txt  README.md
.gitlab/merge_request_templates/: default.md
Drtaa-AI/: .gitignore  README.md
Drtaa-AI/ai-server/: Dockerfile  docker-compose.yml
Drtaa-AI/jetson/: realtime_recognization.py  stt_to_tts_integration.py  wakeword_gui.py
Drtaa-AI/voice/: stt.txt  text_to_gpt.py  voice_recognition.py
Drtaa-Android/: .gitignore  .gitlab-ci.yml  README.md  build.gradle.kts  gradle.properties  project.dot  settings.gradle.kts
Drtaa-Android/app/: build.gradle.kts
Drtaa-Android/config/: detekt.yml
Drtaa-Android/core-auth/: build.gradle.kts
Drtaa-Android/core-data/: build.gradle.kts
Drtaa-Android/core-map/: build.gradle.kts
Drtaa-Android/core-model/: build.gradle.kts
Drtaa-Android/core-mqtt/: build.gradle.kts
Drtaa-Android/core-network/: build.gradle.kts
Drtaa-Android/core-ui/: build.gradle.kts
Drtaa-Android/feature-car/: build.gradle.kts
Drtaa-Android/feature-home/: build.gradle.kts
Drtaa-Android/feature-main/: build.gradle.kts
Drtaa-Android/feature-map/: build.gradle.kts
Drtaa-Android/feature-mypage/: build.gradle.kts
Drtaa-Android/feature-payment/: build.gradle.kts
Drtaa-BackEnd/: .gitignore  Dockerfile  build.gradle  settings.gradle
Drtaa-Docker/: README.md
Drtaa-ROS/: README.md
Drtaa-ROS/catkin_ws/src/morai_camera_subscriber/: CMakeLists.txt  package.xml
Drtaa-ROS/catkin_ws/src/morai_camera_subscriber/src/: morai_camera_subscriber.py
윤가희/: README.md
이정재/: README.md
이현진/: README.md
(+1134 files in other folders)
