<?xml version="1.0"?>
<package format="2">
  <name>morai_camera_subscriber</name>
  <version>0.0.1</version>
  <description>The morai_camera_subscriber package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS 패키지 의존성 -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>

  <export>
    <!-- 다른 ROS 도구들에 의해 사용될 메타데이터를 여기에 추가할 수 있습니다 -->
  </export>
</package>
